--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^1.3.3",
     "gulp-uglify": "^1.2.0",
-    "gulp.spritesmith": "^3.8.0"
+    "gulp.spritesmith": "^3.8.0",
+    "imagemin-gifsicle": "^4.2.0",
+    "imagemin-jpegtran": "^4.2.0",
+    "imagemin-pngquant": "^4.1.0",
+    "imagemin-svgo": "^4.1.2"
   }
 }
