--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "browser-sync": "^2.6.9",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.3.0",
+    "gulp-changed": "^1.2.1",
     "gulp-concat": "^2.5.2",
     "gulp-csscomb": "^3.0.3",
     "gulp-ejs": "^1.1.0",
