--- a/package.json
+++ b/package.json
@@ -18,15 +18,19 @@
     "gulp-ejs": "^1.1.0",
     "gulp-imagemin": "^2.2.1",
     "gulp-jade": "^1.0.0",
+    "gulp-jshint": "^1.11.0",
     "gulp-minify-css": "^1.1.0",
     "gulp-plumber": "^1.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^1.3.3",
+    "gulp-styledocco": "0.0.3",
+    "gulp-stylestats": "^0.7.1",
     "gulp-uglify": "^1.2.0",
     "gulp.spritesmith": "^3.8.0",
     "imagemin-gifsicle": "^4.2.0",
     "imagemin-jpegtran": "^4.2.0",
     "imagemin-pngquant": "^4.1.0",
-    "imagemin-svgo": "^4.1.2"
+    "imagemin-svgo": "^4.1.2",
+    "jshint-stylish": "^2.0.1"
   }
 }
