--- a/package.json
+++ b/package.json
@@ -9,28 +9,32 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.6.9",
-    "gulp": "^3.8.11",
-    "gulp-autoprefixer": "^2.3.0",
-    "gulp-changed": "^1.2.1",
-    "gulp-concat": "^2.5.2",
-    "gulp-csscomb": "^3.0.3",
-    "gulp-ejs": "^1.1.0",
-    "gulp-imagemin": "^2.2.1",
-    "gulp-jade": "^1.0.0",
-    "gulp-jshint": "^1.11.0",
-    "gulp-minify-css": "^1.1.0",
-    "gulp-plumber": "^1.0.0",
+    "browser-sync": "^2.11.1",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-changed": "^1.3.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-csscomb": "^3.0.6",
+    "gulp-ejs": "^2.1.1",
+    "gulp-htmlhint": "^0.3.1",
+    "gulp-imagemin": "^2.4.0",
+    "gulp-jade": "^1.1.0",
+    "gulp-jshint": "^2.0.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^1.3.3",
+    "gulp-sass": "^2.2.0",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-styledocco": "0.0.3",
-    "gulp-stylestats": "^0.7.1",
-    "gulp-uglify": "^1.2.0",
-    "gulp.spritesmith": "^3.8.0",
+    "gulp-stylestats": "^1.1.0",
+    "gulp-uglify": "^1.5.3",
+    "gulp.spritesmith": "^6.2.0",
     "imagemin-gifsicle": "^4.2.0",
-    "imagemin-jpegtran": "^4.2.0",
-    "imagemin-pngquant": "^4.1.0",
-    "imagemin-svgo": "^4.1.2",
-    "jshint-stylish": "^2.0.1"
+    "imagemin-jpegtran": "^4.3.2",
+    "imagemin-pngquant": "^4.2.2",
+    "imagemin-svgo": "^4.2.1",
+    "jshint": "^2.9.1",
+    "jshint-stylish": "^2.1.0"
   }
 }
