--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-csscomb": "^3.0.6",
     "gulp-ejs": "^2.1.1",
+    "gulp-hologram": "^1.2.0",
     "gulp-htmlhint": "^0.3.1",
     "gulp-imagemin": "^3.0.1",
     "gulp-jshint": "^2.0.0",
