--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-stylestats": "^1.1.0",
     "gulp-uglify": "^1.5.3",
+    "gulp-watch": "^4.3.11",
+    "imagemin-gifsicle": "^5.1.0",
     "imagemin-jpegtran": "^5.0.2",
     "imagemin-pngquant": "^5.0.0",
     "imagemin-svgo": "^5.1.0",
