--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-changed": "^1.3.0",
     "gulp-concat": "^2.6.0",
+    "gulp-consolidate": "^0.2.0",
     "gulp-csscomb": "^3.0.6",
     "gulp-ejs": "^2.1.1",
     "gulp-hologram": "^1.2.0",
     "gulp-htmlhint": "^0.3.1",
+    "gulp-iconfont": "^8.0.1",
     "gulp-imagemin": "^3.0.1",
     "gulp-jshint": "^2.0.0",
     "gulp-minify-css": "^1.2.4",
