--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-stylestats": "^1.1.0",
     "gulp-uglify": "^1.5.3",
     "gulp-watch": "^4.3.11",
+    "gulp-webpack": "^1.5.0",
     "imagemin-gifsicle": "^5.1.0",
     "imagemin-jpegtran": "^5.0.2",
     "imagemin-pngquant": "^5.0.0",
