--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "imagemin-svgo": "^5.1.0",
     "jshint": "^2.9.1",
     "jshint-stylish": "^2.1.0"
+  },
+  "dependencies": {
+    "jquery": "^3.1.1"
   }
 }
