iconfontsもdocsに出力されるように変更

--- a/hologram/config.yml
+++ b/hologram/config.yml
@@ -17,6 +17,7 @@ dependencies:
   - ./assets
   - ../htdocs/assets/css
   - ../htdocs/assets/js
+  - ../htdocs/assets/fonts
 
 # スタイルガイドの名前
 styleguide_name: 'Development Document'
