Readmeやドキュメントに新しい仕様を記載

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gulp_template",
+  "name": "frontend_template",
   "version": "1.0.0",
   "description": "",
   "main": "gulpfile.js",
