--- a/package.json
+++ b/package.json
@@ -1,43 +1,47 @@
 {
   "name": "frontend_template",
   "version": "1.0.0",
-  "description": "",
+  "description": "Frontend Template",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "KanDai",
   "license": "ISC",
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/KanDai/frontend-template"
+  },
   "devDependencies": {
-    "browser-sync": "^2.11.1",
+    "browser-sync": "^2.18.8",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-changed": "^1.3.0",
-    "gulp-concat": "^2.6.0",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-changed": "^2.0.0",
+    "gulp-concat": "^2.6.1",
     "gulp-consolidate": "^0.2.0",
-    "gulp-csscomb": "^3.0.6",
-    "gulp-ejs": "^2.1.1",
+    "gulp-csscomb": "^3.0.8",
+    "gulp-ejs": "^3.0.0",
     "gulp-hologram": "^1.2.0",
     "gulp-htmlhint": "^0.3.1",
     "gulp-iconfont": "^8.0.1",
-    "gulp-imagemin": "^3.0.1",
-    "gulp-jshint": "^2.0.0",
+    "gulp-imagemin": "^3.1.1",
+    "gulp-jshint": "^2.0.4",
     "gulp-minify-css": "^1.2.4",
-    "gulp-notify": "^2.2.0",
+    "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.2.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-stylestats": "^1.1.0",
-    "gulp-uglify": "^1.5.3",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.4.1",
+    "gulp-stylestats": "^3.0.1",
+    "gulp-uglify": "^2.0.1",
     "gulp-watch": "^4.3.11",
     "gulp-webpack": "^1.5.0",
     "imagemin-gifsicle": "^5.1.0",
     "imagemin-jpegtran": "^5.0.2",
     "imagemin-pngquant": "^5.0.0",
-    "imagemin-svgo": "^5.1.0",
-    "jshint": "^2.9.1",
-    "jshint-stylish": "^2.1.0"
+    "imagemin-svgo": "^5.2.0",
+    "jshint": "^2.9.4",
+    "jshint-stylish": "^2.2.1"
   },
   "dependencies": {
     "jquery": "^3.1.1"
