--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   },
   "author": "KanDai",
   "license": "ISC",
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/KanDai/frontend-template"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/KanDai/frontend-template"
   },
   "devDependencies": {
     "browser-sync": "^2.18.8",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-cached": "^1.1.1",
     "gulp-changed": "^2.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-consolidate": "^0.2.0",
