--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "browser-sync": "^2.18.8",
     "gulp": "^3.9.1",
+    "gulp-aigis": "^1.3.0",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-cached": "^1.1.1",
     "gulp-changed": "^2.0.0",
@@ -38,6 +39,7 @@
     "imagemin-jpegtran": "^5.0.2",
     "imagemin-pngquant": "^5.0.0",
     "imagemin-svgo": "^5.2.4",
+    "node-aigis": "^1.4.1"
   },
   "dependencies": {
     "jquery": "^3.1.1"
